# chip8

./: .gitignore  Cargo.toml  Readme.md  about.html  chip8.keyboard.mjs  chip8.mjs  console.mjs  errno.mjs  index.html  website.mjs  website.wasm
crates/interpreter/: Cargo.toml
crates/interpreter/examples/: chip8-console.rs  chip8-disasm.rs
crates/interpreter/src/: _lib.rs  addr.rs  context.rs  decode.rs  font.rs  memory.rs  nibble.rs  op.rs  registers.rs  run.rs  screen.rs  syscalls.rs  tls.rs  v.rs
crates/website/: Cargo.toml  build.rs
crates/website/src/: chip8.audio.mjs  chip8.fx.mjs  chip8.keyboard.mjs  chip8.mjs  console.rs  wasi_snapshot_preview1.mjs  wasi_snapshot_preview1.rs  website.html  website.js  website.mjs  website.rs
examples/: sierpinski.ch8
scripts/: publish.cmd
src/: _lib.rs  addr.rs  memory.rs  nibble.rs  op.rs  screen.rs  v.rs
