# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name                = "maulingmonkey-chip8-interpreter"
version             = "0.0.0-git"
edition             = "2021"
repository          = "https://github.com/MaulingMonkey/chip8"
license             = "Apache-2.0 OR MIT"

[lib]
path                = "src/_lib.rs"

[dependencies]
bytemuck.version    = "1"
bytemuck.features   = ["derive"]

[dev-dependencies]
winapi.version      = "0.3"
winapi.features = [
    # um
    "consoleapi",
    "processenv",
    "winbase",
    "wincon",
]
