# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name                = "maulingmonkey-chip8-interpreter"
version             = "0.0.0-git"
edition             = "2021"
repository          = "https://github.com/MaulingMonkey/chip8"
license             = "Apache-2.0 OR MIT"

[features]
default             = ["default-syscalls"]
default-syscalls    = ["rand"]

[lib]
path                = "src/_lib.rs"

[dependencies]
bytemuck.version    = "1"
bytemuck.features   = ["derive"]
rand.version        = "0.8"
rand.optional       = true

[target.'cfg(windows)'.dev-dependencies]
mcom                = "0.1.4"
thindx-xaudio2      = "0.0.0-2022-11-19"
winresult           = "0.1" # required to use thindx-xaudio2 but it shouldn't be
winapi.version      = "0.3"
winapi.features = [
    # um
    "consoleapi",
    "processenv",
    "utilapiset",
    "winbase",
    "wincon",
]
