# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name                = "maulingmonkey-chip8-interpreter"
version             = "0.0.0-git"
edition             = "2021"
repository          = "https://github.com/MaulingMonkey/chip8"
license             = "Apache-2.0 OR MIT"

[features]
default             = ["default-syscalls"]
default-syscalls    = ["rand"]

[lib]
path                = "src/_lib.rs"

[dependencies]
bytemuck.version    = "1"
bytemuck.features   = ["derive"]
instant.version     = "0.1"
rand.version        = "0.8"
rand.optional       = true

[target.'cfg(windows)'.dev-dependencies]
mcom                = "0.1.4"
thindx-xaudio2      = "0.0.0-2023-04-17"
winapi.version      = "0.3"
winapi.features = [
    # um
    "consoleapi",
    "processenv",
    "utilapiset",
    "winbase",
    "wincon",
]
